[package]
name = "chess-gui"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jonathan_hallstrom_chess = { git = "https://github.com/INDA23PlusPlus/johalls-chess.git" }
ggez = "0.9.3"
mint = "0.5.9"
lazy_static = "1.4.0"
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" }
serde = "1.0.188"
serde_json = "1.0.107"